ECampus.Services.FileManager/k8s/deployment.test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: root-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: root-service
  template:
    metadata:
      labels:
        app: root-service
    spec:
      containers:
        - image: voonya/test
          imagePullPolicy: Always
          name: root-service
          ports:
            - containerPort: 8080
