ECampus.Services.FileManager/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-manager
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: file-manager                # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
     labels:
       app: file-manager               # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: voonya/file-manager    # образ Docker
          imagePullPolicy: Never   # вказує k8s, що образ не потрібно завантажувати (варто використовувати лише для випадків, коли образи локальні)
          name: file-manager           # ім'я контейнеру
          ports:
            - containerPort: 8080  # порт по якому можна звертатись до поди
