ECampus.Services.FileManager/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file-manager-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
spec:
  rules:
    - http:
        paths:
          - path: /api/file-service
            pathType: "Prefix"
            backend:
              service:
                name: file-manager-service
                port:
                  number: 80
